Inserção do dado de Potencial de Intensificação, expansion panel nos dados, nova camada de Pastagem Degrada por Município, ano vinculado ao mapa base do Landsat e outros ajustes em geral...

--- a/src/client/src/app/map/map-mobile.component.css
+++ b/src/client/src/app/map/map-mobile.component.css
@@ -28,7 +28,7 @@ hr {
 }
 
 .dpat-ol-map {
-	height: calc(100vh - 55px); /* 100% of the viewport height - navbar height */
+	height: calc(82vh); /* 100% of the viewport height - navbar height */
 }
 
 .ol-zoom-in, .ol-zoom-out {
