--- a/src/client/src/app/map/map.component.css
+++ b/src/client/src/app/map/map.component.css
@@ -103,13 +103,13 @@ hr {
 }
 
 .layers-options {
-	padding-left: 50px;
+	padding-left: 35px;
 
 }
 
 .layers-indicator {
 	font-size: 0.9rem;
-	padding-left: 75px;
+	padding-left: 60px;
 	padding-bottom: 15px;
 	margin-right: 0px !important;
 	flex-wrap: nowrap;
@@ -157,11 +157,11 @@ hr {
 }
 
 #layers_produtividade {
-	margin-bottom: 0px;
+	/*margin-bottom: 20px;*/
 }
 
 #layers_degradacao {
-	margin-bottom: 20px;
+	/*margin-bottom: 20px;*/
 }
 
 .font-size-geral {
@@ -221,8 +221,8 @@ h6 {
 }
 
 .paddingLayerLegend {
-	padding-top: 5px;
 	padding-left: 0px;
+	padding-right: 0px;
 }
 
 .baseMap {
@@ -287,7 +287,7 @@ h6 {
 }
 
 .separacaoLayers {
-	border-top: 1px solid #717171;
+	border-top: 1px solid #d1d1d1;
 }
 
 .optionPontosTVI {
