Atualizações nos gráficos de Série Temporal, Percentual de área em alguns dados, linha de Lotação bovina no gráfico e Sombra de intervalo de confiança.

--- a/src/client/src/app/map/map.component.css
+++ b/src/client/src/app/map/map.component.css
@@ -117,6 +117,7 @@ hr {
 
 .value-indicators {
 	padding-left: 5px;
+	display: inline;
 }
 
 .button-row button,
@@ -467,5 +468,11 @@ h6 {
 	.layersConteudo {
   	max-height: 800px;
   }
+}
+
+.stylePercentual {
+	padding-left: 5px;
+  font-size: 0.8rem;
+  display: inline;
 }
 
