Interações com os Gráficos, escolher ano ao clicar no gráfico de séries temporais, escolher estado ao clicar no gráfico de barras, novos gráficos de transições das pastagens.

--- a/src/client/src/app/map/map.component.css
+++ b/src/client/src/app/map/map.component.css
@@ -476,3 +476,12 @@ h6 {
   display: inline;
 }
 
+.legend_Graphic {
+	position: absolute;
+	right: 2%
+}
+
+#seriesTooltipTemplate {
+	display: none !important;
+}
+
