--- a/src/client/src/styles.css
+++ b/src/client/src/styles.css
@@ -127,6 +127,14 @@
 	background-color: rgba(183,16,16,.5) !important;
 }
 
+#layers_degradacao .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle {
+	border-color: #da8c8c !important;
+}
+
+#layers_degradacao .mat-radio-button.mat-accent .mat-radio-inner-circle {
+	background-color: #da8c8c !important;
+}
+
 #layers_produtividade .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
 	background-color: #f68e42 !important;
 }
@@ -135,12 +143,28 @@
 	background-color: rgba(246,142,66,.5) !important;
 }
 
+#layer_potencial .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
+	background-color: #2a9f5c !important;
+}
+
+#layer_potencial .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
+	background-color: rgba(42,159,92,.5) !important;
+}
+
 #layers_pontos .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
 	background-color: #7b2800 !important;
 }
 
 #layers_pontos .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
 	background-color: rgba(123, 40, 0,.5) !important;
+}
+
+#layers_pontos_tvi .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
+	background-color: #1f4423 !important;
+}
+
+#layers_pontos_tvi .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
+	background-color: rgba(31, 68, 35,.5) !important;
 }
 
 .mat-raised-button {
@@ -192,7 +216,7 @@
 
 .title-metadados {
 	text-align: center;
-  font-weight: 600;
+  	font-weight: 600;
 }
 
 .button-close-metadados {
@@ -202,4 +226,12 @@
 
 .ngx-charts .tooltip-anchor {
 	display: none !important;
+}
+
+.mat-expansion-panel:not([class*=mat-elevation-z]) {
+	box-shadow: none !important;
+}
+
+.mat-expansion-panel-body {
+	padding: 0 13px 10px !important;
 }
