Proxy para layer de UTFGrid

--- a/src/client/src/app/map/map-mobile.component.html
+++ b/src/client/src/app/map/map-mobile.component.html
@@ -118,7 +118,7 @@
 									</div>
 									<div class="col-10 col-sm-10 col-md-10 col-lg-10 col-xl-10 value-indicators"> {{ indicatorRebanhoBovino | number:'3.0-0' }} UA </div>
 								</div>
-								<div class="row">
+								<!-- <div class="row">
 									<div class="col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4" id='dropdowYearRebanho'>
 										<mat-form-field>
 										  <mat-select placeholder="" [disabled]=!rebanho_bovino_show (selectionChange)="updateyear()" [value]="yearRebanho" [(ngModel)]="yearRebanho">
@@ -126,7 +126,7 @@
 										  </mat-select>
 										</mat-form-field>
 									</div>
-								</div>
+								</div> -->
 							</div>
 							<div class="form-group separacaoLayers" id="layers_pontos">
 								<div>
