--- a/src/client/src/app/map/map.component.html
+++ b/src/client/src/app/map/map.component.html
@@ -559,7 +559,7 @@
 	        <button type="button" class="collapse-btn btn btn-light btn-sm float-right" (click)="collapseLegends = !collapseLegends" [attr.aria-expanded]="!collapseLegends" aria-controls="camadageografica">-</button>
 	      </div>
 				<div class="legendasConteudo">
-					<mat-accordion [multi]="multi">
+					<mat-accordion>
 			      <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 paddingLayerLegend" [ngbCollapse]="collapseLegends">
 			      	<div class="row" *ngIf="checked">
 		      			<div class="col-2 col-sm-2 col-md-2 col-lg-2 col-xl-2 slider-layer">
